--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-plugin",
+  "name": "frontend-test-flux",
   "version": "0.0.1",
   "private": false,
   "description": "Plugin",
